--- a/Introduction_to_matrix_manipulation_in_R.ipynb
+++ b/Introduction_to_matrix_manipulation_in_R.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/KinghornLab/Introduction_to_matrix_manipulation_in_R.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/KinghornLab/Introduction_to_Google_Colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -17,7 +17,7 @@
         "id": "6d954c3e"
       },
       "source": [
-        "## Introduction to matrix manipulation in R\n",
+        "## TEST Introduction to Google Colab\n",
         "\n",
         "BIOC3605 - Dr Andrew Kinghorn"
       ]
@@ -25,16 +25,56 @@
     {
       "cell_type": "markdown",
       "source": [
-        "A variable can hold a single value."
+        "This is a Jupyter Notebook. One each \"cell\" you can either add text (like here) or code (like below)."
       ],
       "metadata": {
         "id": "DPyfNaZOM-wT"
       },
       "id": "DPyfNaZOM-wT"
     },
-    
+    {
+      "cell_type": "code",
+      "source": [
+        "!echo I am using Google Colab\n",
+        "!echo\n",
+        "!echo Today is `date`\n"
+        "x <- 1:10; #In this case, x is a vector of cosecurtive natural numbers 1, 2, 3,..., 10\n"
+        "print(x);"
+      ],
+      "metadata": {
+        "id": "NGbTea6VYitx"
+      },
+      "id": "NGbTea6VYitx",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can describe the next bit of code here.\n",
+        "\n",
+        "For example: The code \"cell\" below connects Colab to our Google Drive."
+      ],
+      "metadata": {
+        "id": "RhPbHEneai2F"
+      },
+      "id": "RhPbHEneai2F"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "pW_BSWHdZgb7"
+      },
+      "id": "pW_BSWHdZgb7",
+      "execution_count": null,
+      "outputs": []
+    }
   ],
-   "metadata": {
+  "metadata": {
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
