--- a/Introduction_to_matrix_manipulation_in_R.ipynb
+++ b/Introduction_to_matrix_manipulation_in_R.ipynb
@@ -37,9 +37,7 @@
       "source": [
         "!echo I am using Google Colab\n",
         "!echo\n",
-        "!echo Today is `date`\n"
-        "x <- 1:10; #In this case, x is a vector of cosecurtive natural numbers 1, 2, 3,..., 10\n"
-        "print(x);"
+        "!echo Today is `date`"
       ],
       "metadata": {
         "id": "NGbTea6VYitx"
