--- a/Introduction_to_matrix_manipulation_in_R.ipynb
+++ b/Introduction_to_matrix_manipulation_in_R.ipynb
@@ -256,6 +256,9 @@
     }
    ],
    "source": [
+    
+    "x <- 1; # This variable has name 'x'. It is assigned to hold the number 1\n"
+    "print(x);"
     "dat <- as.data.frame(read.table(\"GSE102349_NPC_mRNA_processed.txt\",header = TRUE,sep = \"\\t\", dec = \".\",na.strings = \"NA\",stringsAsFactors=FALSE,check.names = FALSE))\n",
     "row.names(dat) <- dat[,1]\n",
     "dat<-dat[,-1]\n",
